Fix code window text alignment on mobile

--- a/css/hero.css
+++ b/css/hero.css
@@ -234,6 +234,7 @@
   line-height: 1.8;
   color: #A6ACCD;
   overflow-x: auto;
+  text-align: left;
 }
 
 .code-window__body pre {
